k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aegisops-ingress
  namespace: aegisops
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "backend"
spec:
  rules:
    - host: aegisops.gov.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /ws-emergency
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
